# pricing-function-mapper

./: .gitignore  .pre-commit-config.yaml  README.md  Vagrantfile  comp_car_active_mapper_advanced.py  comp_car_quotes_advanced.csv  config.example.json  config.segment.example.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
outputs/reliability_check_a/: comp_car_quotes_advanced.csv  pricing_engine.pkl  run_metadata.json  run_state.json
outputs/reliability_check_b/: pricing_engine.pkl  run_metadata.json  run_state.json
pricing_function_mapper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pricing_mapper/: __init__.py  __main__.py  active_mapper.py  api.py  artifacts.py  benchmark.py  cli.py  config.py  domain.py  encoding.py  engine.py  models.py  quote.py  utils.py
scripts/: quality.sh  smoke.sh
tests/: test_config_resume_cli.py  test_domain.py  test_encoding.py  test_engine_cli.py  test_utils_and_mapper.py
